<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cadastro"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/lableName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/materialToolbar"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/lableName"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text"
        android:labelFor="@id/lableName"
        />

    <TextView
        android:id="@+id/lablePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/inputName"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/inputPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/lablePhone"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="phone"
        android:labelFor="@id/lablePhone"
        android:hint="@string/ex_12_93456_7890"
        android:autofillHints="phone"
        />

    <TextView
        android:id="@+id/lableEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/inputPhone"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/lableEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textEmailAddress"
        android:labelFor="@id/lableEmail"
        />

    <CheckBox
        android:id="@+id/checkboxEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputEmail"
        app:layout_constraintStart_toEndOf="parent"
        android:checked="false"
        android:text="@string/ingressar_na_lista_de_e_mails"
        />

    <TextView
        android:id="@+id/lableGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/checkboxEmail"
        app:layout_constraintStart_toStartOf="parent"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lableGenero"
        app:layout_constraintStart_toEndOf="parent"
        android:orientation="horizontal"
    >
        <RadioButton
            android:id="@+id/radioButtonMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/radioButtonFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/feminino"/>
    </RadioGroup>

    <TextView
        android:id="@+id/lableCidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/inputCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/lableCidade"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text"
        android:labelFor="@id/lableCidade"
        />

    <TextView
        android:id="@+id/lableUf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/inputCidade"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/valoresUf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lableUf"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintStart_toStartOf="parent" >
        <Button
            android:id="@+id/buttonLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar" />

        <Button
            android:id="@+id/buttonSalvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salvar"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>